--- a/01-sample.yml
+++ b/01-sample.yml
@@ -1,6 +1,6 @@
-name: demo play 1
-hosts: all
-tasks:
-  -name: print hello
-  ansible.builtin.debug:
-    msg: echo hello
+- name: demo play 1
+  hosts: all
+  tasks:
+    -name: print hello
+    ansible.builtin.debug:
+      msg: echo hello
