--- a/02-var.yml
+++ b/02-var.yml
@@ -6,3 +6,13 @@
     - name: print play variable
       ansible.builtin.debug:
         msg: URL {{ URL }}
+
+
+    - name: play variables from files
+      hosts: localhost
+      var_files:
+        - var.yml
+      tasks:
+        - name: print play variable from file
+          ansible.builtin.debug:
+            msg: URL {{ URL }}
