updating ./learn-ansible

--- a/02-var.yml
+++ b/02-var.yml
@@ -33,3 +33,14 @@
     - name: print play variable from inventory
       ansible.builtin.debug:
         msg: "URL = {{ URL }}, Hostname of the server = {{ ansible_hostname }}"
+
+- name: register a variable
+  hosts: localhost
+  tasks:
+    - name: get uptime output
+      ansible.builtin.shell: uptime
+      register: out
+
+    - name: print out
+      ansible.builtin.debug:
+        msg: "{{ out }}"
