--- a/02-var.yml
+++ b/02-var.yml
@@ -44,3 +44,11 @@
     - name: print out
       ansible.builtin.debug:
         msg: "{{ out }}"
+
+    - name: declare a variable
+      ansible.builtin.set_fact:
+        status: "{{ out.rc }}"
+
+    - name: print out status
+      ansible.builtin.debug:
+        msg: "{{ status }}"
