--- a/04-parameter-store.yml
+++ b/04-parameter-store.yml
@@ -1,6 +1,6 @@
 - name: print parameter
   hosts: localhost
   tasks:
-    - name: print match value
+    - name: print test1 value
       ansible.builtin.debug:
-        msg: "{{ lookup('amazon.aws.aws_ssm', 'match') }}"
+        msg: "{{ lookup('amazon.aws.aws_ssm', 'test1') }}"
