--- a/05-filters.yml
+++ b/05-filters.yml
@@ -5,4 +5,4 @@
   tasks:
     - name: filter
       ansible.builtin.debug:
-        msg: "{{ URL | urlsplit }}"
+        msg: "{{ URL | split('/') }}"
